bk_ida/gobmkida/c3/owl_find_lunches
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_find_lunches/src/engine/owl.c:4649:12: error: expected expression
*( _OWORD *)&owl->lunch[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_find_lunches/src/engine/owl.c:4649:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl->lunch[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_find_lunches/src/engine/owl.c:4650:12: error: expected expression
*( _OWORD *)owl->lunch = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_find_lunches/src/engine/owl.c:4650:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)owl->lunch = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_find_lunches/src/obj/1/owl.o] Error 1
